# Google-Calendar-MCP-Server

./: .gitignore  README.md  main.py  pyproject.toml
src/: service.py
src/events/: create_event.py  delete_event.py  get_events.py
src/schemas/: __init__.py  api_return.py  calendar_event.py  events_query.py
src/tools/: create_event_tool.py  delete_event_tool.py  get_events_tool.py
